--- a/css.css
+++ b/css.css
@@ -3,8 +3,8 @@ ol{
 }
 
 h3{
-  color:red；
-  font-size:50px;
-  font-style:italc;
-  font-weight:bold;
-}
+   color:red；
+   font-size:50px;
+   font-style:italic;
+   font-weight:bold;
+  }
