--- a/css.css
+++ b/css.css
@@ -1,10 +1,10 @@
 ol{
-  background-color:blue;
+  background-color:orange;
 }
 
 h3{
-   color:red；
+  color:red；
    font-size:50px;
    font-style:italic;
    font-weight:bold;
-  }
+}
